--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,9 @@
 }
 
 :root {
-    --color-bg: #1f1f38;
+    --color-bg: #1f1842;
     --color-bg-variant: #2c2c6c;
-    --color-primary: #8340f0;
+    --color-primary: #4dac30;
     --color-primary-variant: rgba(77,181,255,0.4);
     --color-white: #fff;
     --color-light: rgba(255, 255, 255, 0.6);
@@ -22,7 +22,7 @@
 
     --container-width-lg: 75%;
     --container-width-md: 86%;
-    --container-width-ms: 90%;
+    --container-width-sm: 90%;
 
 }
 
@@ -59,7 +59,6 @@ h1 {
 
 section {
     margin-top: 8rem;
-    height: 100vh;
 }
 
 section > h2, section > h5 {
