--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -41,14 +41,14 @@ header {
 .me {
     background: linear-gradient(var(--color-primary), transparent);
     width: 22rem;
-    height: 19.4rem;
+    height: 19.6rem;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
     margin-top: 4rem;
     border-radius: 12rem 12rem 0 0;
     overflow: hidden;
-    padding: 0.2rem 1.5rem 1.5rem;
+    padding: 0 1.5rem 0 1.5rem;
 }
 
 /* ================ SCROLL DOWN ================ */
