--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -19,8 +19,16 @@
 
 .portfolio__item-image{
     border-radius: 1.5rem;
-    height: 45%;
+    height: 150px;
     overflow: hidden;
+}
+
+.portfolio__item-image>img {
+    align-self: center;
+    width: 100%;
+    height: 150px;
+    margin: auto;
+    
 }
 
 .portfolio__item h3 {
